crates/php-parser/tests/snapshots/integration__qualified_names.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$user = new App\Models\User();
App\Helpers\format($data);

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "user"
                },
                "span": {
                  "start": 6,
                  "end": 11
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "New": {
                    "class": {
                      "kind": {
                        "Identifier": "App\\Models\\User"
                      },
                      "span": {
                        "start": 18,
                        "end": 33
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 14,
                  "end": 35
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 35
          }
        }
      },
      "span": {
        "start": 6,
        "end": 37
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "App\\Helpers\\format"
                },
                "span": {
                  "start": 37,
                  "end": 55
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "data"
                    },
                    "span": {
                      "start": 56,
                      "end": 61
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 56,
                    "end": 61
                  }
                }
              ]
            }
          },
          "span": {
            "start": 37,
            "end": 62
          }
        }
      },
      "span": {
        "start": 37,
        "end": 64
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 64
  }
}
