crates/php-parser/tests/snapshots/integration__readonly_const_error.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
cannot use 'readonly' as constant modifier
